GoalTracker/force-app/main/default/objects/Giving_Page_Option__c/Giving_Page_Option__c.object-meta.xml
<CustomObject>
    <label>Giving Page Option</label>
    <nameField>
        <label>Giving Page Options Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Giving Page Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>