GoalTracker/force-app/main/default/objects/Giving_Page_Option__c/fields/Background__c.field-meta.xml
<CustomField>
    <fullName>Background__c</fullName>
    <label>Background</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>