GoalTracker/force-app/main/default/objects/Giving_Page_Option__c/fields/Choice_Image__c.field-meta.xml
<CustomField>
    <fullName>Choice_Image__c</fullName>
    <label>Secondary Image</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>