GoalTracker/force-app/main/default/objects/Giving_Page_Option__c/fields/Choice_Image_Width__c.field-meta.xml
<CustomField>
    <fullName>Choice_Image_Width__c</fullName>
    <label>Secondary Image Width</label>
    <length>255</length>
    <type>Text</type>
</CustomField>