GoalTracker/force-app/main/default/objects/Giving_Page_Option__c/fields/Choice_Page_Title__c.field-meta.xml
<CustomField>
    <fullName>Choice_Page_Title__c</fullName>
    <label>Choice Page Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>