GoalTracker/force-app/main/default/objects/Giving_Page_Option__c/fields/Choice_sub_title_alignment__c.field-meta.xml
<CustomField>
    <fullName>Choice_sub_title_alignment__c</fullName>
    <description>Used to align sub-title horizontally</description>
    <inlineHelpText>Used to align sub-title horizontally</inlineHelpText>
    <label>Choice sub-title alignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Left</fullName>
                <default>true</default>
                <label>Left</label>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
            <value>
                <fullName>Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>