GoalTracker/force-app/main/default/objects/Giving_Page_Option__c/fields/Home_Page_Sub_title__c.field-meta.xml
<CustomField>
    <fullName>Home_Page_Sub_title__c</fullName>
    <label>Home Page Sub-title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>