GoalTracker/force-app/main/default/objects/Giving_Page_Option__c/fields/Home_Page_Title__c.field-meta.xml
<CustomField>
    <fullName>Home_Page_Title__c</fullName>
    <description>Title displayed on the giving home page.</description>
    <label>Home Page Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>