GoalTracker/force-app/main/default/objects/Giving_Page_Option__c/fields/Secondary_Image_On_Choice_Page__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Image_On_Choice_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secondary Image On Choice Page</label>
    <type>Checkbox</type>
</CustomField>