GoalTracker/force-app/main/default/objects/Giving_Page_Option__c/fields/Secondary_Image_on_home_page__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Image_on_home_page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secondary Image On Home Page</label>
    <type>Checkbox</type>
</CustomField>