GoalTracker/force-app/main/default/objects/Giving_Page_Option__c/fields/Title_allignmnent__c.field-meta.xml
<CustomField>
    <fullName>Title_allignmnent__c</fullName>
    <description>Used to align title horizontally.</description>
    <inlineHelpText>Used to align title horizontally.</inlineHelpText>
    <label>Choice Title alignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Left</fullName>
                <default>true</default>
                <label>Left</label>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
            <value>
                <fullName>Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>